--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<img src="/logo.svg" alt="Logo" />
 			<h1>Shorts Summary</h1>
 			<form id="form">
-				<input type="url" placeholder="URL do vídeo" />
+				<input id="url" type="url" placeholder="URL do vídeo" />
 				<button title="Resumir"><i class="ph ph-play"></i></button>
 			</form>
 
